3-tier-rpi/longhorn-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend-lb
  namespace: longhorn-system
spec:
  selector:
    app: longhorn-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer # Leverages MetalLB
